# gridarians

./: .gitignore  Gridarians-Demo.nlogo  Gridarians.nlogo  Gridarians.nlogox  README.md  evolution-llm.nls  pyproject.toml  utils.py
LEAR/: .gitignore  README.md  pyproject.toml
LEAR/docs/: evolution_strategies.md  gin_configuration.md  verify_netlogo.md
LEAR/src/: __init__.py  main.nlogo
LEAR/src/analysis/: gecco25_plots.ipynb
LEAR/src/config/: default.gin  override_gin.py
LEAR/src/environments/: double-collection-env.nlogo  resources.nlogo  simple-collection-env.nlogo
LEAR/src/environments/config/: simple-collection-config.nls
LEAR/src/environments/env_utils/: evolution.nls  logging.nls  prompt_config.nls
LEAR/src/generators/: base.py
LEAR/src/graph_providers/: __init__.py  base.py  unified_provider.py
LEAR/src/mutation/: mutate_code.py  text_based_evolution.py
LEAR/src/netlogo_code_generator/: __init__.py  graph.py  nodes.py  state.py
LEAR/src/nlogo_string_count/: netlogo_str_func.py  test_netlogo_str_func.py
LEAR/src/utils/: config.py  logging.py  prompts.py  retry.py  sim_logger.py  storeprompts.py
LEAR/src/utils/prompts/: __init__.py
LEAR/src/utils/prompts/definitions/: collection_poison.yaml  collection_resource.yaml  collection_simple.yaml
LEAR/src/utils/prompts/static_definitions/: claude.yaml  complex_prompts.yaml  evolution_strategies.yaml  groq.yaml  langchain.yaml  retry_prompts.yaml
LEAR/src/verification/: test_verifier.py  verifier_test_data.py  verify_netlogo.py
prompts/: init_body_v1.txt  init_rule_v1.txt  (+5 more)
